Fix layout issue with auto-sizing

--- a/web/src/app/task-page-content-pane-checklist-item/task-page-content-pane-checklist-item.component.scss
+++ b/web/src/app/task-page-content-pane-checklist-item/task-page-content-pane-checklist-item.component.scss
@@ -27,13 +27,13 @@
 .text {
     flex-grow: 1;
     border-bottom: 1px solid grey;
-    padding-bottom: 4px;
     width: 100%;
     position: relative;
 }
 
 input,
 textarea {
+    padding: 0;
     border: none;
 }
 
