--- a/web/src/app/task-page-content-pane-description/task-page-content-pane-description.component.scss
+++ b/web/src/app/task-page-content-pane-description/task-page-content-pane-description.component.scss
@@ -11,4 +11,5 @@ textarea {
     overflow: hidden;
     width: 100%;
     transition: height 0.1s;
+    padding: 0;
 }
